--- a/config.json
+++ b/config.json
@@ -10,6 +10,9 @@
           "title": true
         },
         "wrapStandAloneImageWithinParagraph": false
+      },
+      "renderer": {
+        "unsafe": true
       }
     }
   }
