feat: fixed baseurl

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "baseurl": "https://omasom.com/",
+  "baseurl": "https://osm-beta.netlify.app",
   "languageCode": "en-us",
   "title": "Omaha School of Ministry",
   "markup": {
